themedir = $(pkgdatadir)/indicator/Radiance
theme_DATA = \
	break-000.svg \
	break-005.svg \
	break-010.svg \
	break-015.svg \
	break-020.svg \
	break-025.svg \
	break-030.svg \
	break-035.svg \
	break-040.svg \
	break-045.svg \
	break-050.svg \
	break-055.svg \
	break-060.svg \
	break-065.svg \
	break-070.svg \
	break-075.svg \
	break-080.svg \
	break-085.svg \
	break-090.svg \
	break-095.svg \
	break-100.svg \
	break-paused-000.svg \
	break-paused-005.svg \
	break-paused-010.svg \
	break-paused-015.svg \
	break-paused-020.svg \
	break-paused-025.svg \
	break-paused-030.svg \
	break-paused-035.svg \
	break-paused-040.svg \
	break-paused-045.svg \
	break-paused-050.svg \
	break-paused-055.svg \
	break-paused-060.svg \
	break-paused-065.svg \
	break-paused-070.svg \
	break-paused-075.svg \
	break-paused-080.svg \
	break-paused-085.svg \
	break-paused-090.svg \
	break-paused-095.svg \
	break-paused-100.svg \
	pomodoro-000.svg \
	pomodoro-005.svg \
	pomodoro-010.svg \
	pomodoro-015.svg \
	pomodoro-020.svg \
	pomodoro-025.svg \
	pomodoro-030.svg \
	pomodoro-035.svg \
	pomodoro-040.svg \
	pomodoro-045.svg \
	pomodoro-050.svg \
	pomodoro-055.svg \
	pomodoro-060.svg \
	pomodoro-065.svg \
	pomodoro-070.svg \
	pomodoro-075.svg \
	pomodoro-080.svg \
	pomodoro-085.svg \
	pomodoro-090.svg \
	pomodoro-095.svg \
	pomodoro-100.svg \
	pomodoro-paused-000.svg \
	pomodoro-paused-005.svg \
	pomodoro-paused-010.svg \
	pomodoro-paused-015.svg \
	pomodoro-paused-020.svg \
	pomodoro-paused-025.svg \
	pomodoro-paused-030.svg \
	pomodoro-paused-035.svg \
	pomodoro-paused-040.svg \
	pomodoro-paused-045.svg \
	pomodoro-paused-050.svg \
	pomodoro-paused-055.svg \
	pomodoro-paused-060.svg \
	pomodoro-paused-065.svg \
	pomodoro-paused-070.svg \
	pomodoro-paused-075.svg \
	pomodoro-paused-080.svg \
	pomodoro-paused-085.svg \
	pomodoro-paused-090.svg \
	pomodoro-paused-095.svg \
	pomodoro-paused-100.svg


EXTRA_DIST = \
	$(theme_DATA)

-include $(top_srcdir)/git.mk

# vi:ts=4:noet
